--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -1,19 +1,18 @@
 {
   "name": "eslint-config-custom",
   "version": "0.0.0",
+  "private": true,
   "main": "index.js",
-  "license": "MIT",
+  "files": [
+    "*.js"
+  ],
   "dependencies": {
-    "eslint": "^7.23.0",
-    "eslint-config-next": "13.0.0",
+    "eslint": "^8.33.0",
+    "eslint-config-next": "13.1.7-canary.4",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "7.31.8",
-    "eslint-config-turbo": "latest"
+    "eslint-config-turbo": "^0.0.7"
   },
   "devDependencies": {
-    "typescript": "^4.7.4"
-  },
-  "publishConfig": {
-    "access": "public"
+    "typescript": "^4.9.5"
   }
 }
