--- a/.gitignore
+++ b/.gitignore
@@ -18,16 +18,18 @@ build
 *.pem
 
 # debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.*.local
+!packages/database/.env
 
 # turbo
 .turbo
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
