--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -6,22 +6,22 @@
     "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "TIMING=1 next lint",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "^13.1.1",
+    "next": "13.1.7-canary.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ui": "workspace:*"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "eslint-config-custom": "workspace:*",
-    "eslint": "7.32.0",
-    "tsconfig": "workspace:*",
-    "@types/node": "^17.0.12",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
-    "typescript": "^4.5.3"
+    "eslint": "^8.33.0",
+    "eslint-config-custom": "workspace:*",
+    "tsconfig": "workspace:*",
+    "typescript": "^4.9.5"
   }
 }
