--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,17 +3,17 @@
   "version": "0.0.0",
   "main": "./index.tsx",
   "types": "./index.tsx",
-  "license": "MIT",
   "scripts": {
-    "lint": "eslint *.ts*"
+    "lint": "TIMING=1 eslint *.ts*",
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "eslint": "^7.32.0",
+    "eslint": "^8.33.0",
     "eslint-config-custom": "workspace:*",
     "react": "^18.2.0",
     "tsconfig": "workspace:*",
-    "typescript": "^4.5.2"
+    "typescript": "^4.9.5"
   }
 }
