--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "turbo-prisma",
-  "version": "0.0.0",
+  "name": "starter",
+  "version": "0.0.1",
   "private": true,
   "workspaces": [
     "apps/*",
