--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,5 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
@@ -8,6 +7,7 @@
     },
     "web#build": {
       "dependsOn": ["^db:generate", "^build"],
+      "env": ["DATABASE_URL"],
       "outputs": [".next/**"]
     },
     "db:generate": {},
