--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "engines": {
     "node": ">=16.0.0"
   },
+  "prisma": {
+    "schema": "packages/database/prisma/schema.prisma",
+  },
   "packageManager": "pnpm@7.26.3"
 }
