--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node": ">=16.0.0"
   },
   "prisma": {
-    "schema": "packages/database/prisma/schema.prisma",
+    "schema": "packages/database/prisma/schema.prisma"
   },
   "packageManager": "pnpm@7.26.3"
 }
