--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "next": "13.1.7-canary.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "ui": "workspace:*"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
