--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,8 +20,12 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.33.0",
     "eslint-config-custom": "workspace:*",
+    "postcss": "^8.4.21",
+    "tailwind-config": "workspace:*",
+    "tailwindcss": "^3.2.4",
     "tsconfig": "workspace:*",
     "typescript": "^4.9.5"
   }
