--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,19 +1,25 @@
 {
   "name": "ui",
   "version": "0.0.1",
-  "main": "./index.tsx",
-  "types": "./index.tsx",
+  "main": "./src/index.tsx",
+  "types": "./src/index.tsx",
   "scripts": {
-    "lint": "TIMING=1 eslint *.ts*",
+    "lint": "TIMING=1 eslint . --ext .ts,.tsx",
     "type-check": "tsc --noEmit"
+  },
+  "dependencies": {
+    "class-variance-authority": "0.4.0",
+    "clsx": "1.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
     "eslint": "^8.33.0",
     "eslint-config-custom": "workspace:*",
-    "react": "^18.2.0",
     "tsconfig": "workspace:*",
     "typescript": "^4.9.5"
+  },
+  "peerDependencies": {
+    "react": "^18",
+    "react-dom": "^18"
   }
 }
