--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,16 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**"]
+      "outputs": ["dist/**", ".next/**"],
+      "outputMode": "new-only"
+    },
+    "beta#build": {
+      "dependsOn": ["^db:generate", "^build"],
+      "env": ["DATABASE_URL"],
+      "outputs": [".next/**"]
+    },
+    "beta#vercel-build": {
+      "dependsOn": ["share-static-hardlink", "beta#build"]
     },
     "web#build": {
       "dependsOn": ["^db:generate", "^build"],
@@ -17,6 +26,10 @@
       "cache": false
     },
     "lint": {},
+    "share-static-hardlink": {
+      "persistent": true,
+      "cache": false
+    },
     "type-check": {}
   }
 }
