--- a/apps/beta/package.json
+++ b/apps/beta/package.json
@@ -12,9 +12,9 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
+    "@next/font": "13.1.7-canary.5",
     "database": "workspace:*",
-    "next": "13.1.7-canary.4",
+    "next": "13.1.7-canary.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ui": "workspace:*"
