--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -7,6 +7,6 @@
       "#/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.mdx", "**/*.mjs"],
   "exclude": ["node_modules"]
 }
