--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "next": "13.1.7-canary.5",
+    "nextra": "2.2.14",
+    "nextra-theme-docs": "2.2.14",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
